@@ -11,6 +11,19 @@ http://docutils.sourceforge.net/docs/ref/docutils.dtd.
 __docformat__ = 'reStructuredText'
 
 import sys
+
+# Work around broken PyXML and obsolete python stdlib behaviour. (The stdlib
+# replaces its own xml module with PyXML if the latter is installed. However,
+# PyXML is no longer maintained and partially incompatible/buggy.) Reverse
+# the order in which xml module and submodules are searched to import stdlib
+# modules if they exist and PyXML modules if they do not exist in the stdlib.
+#
+# See http://sourceforge.net/tracker/index.php?func=detail&aid=3552403&group_id=38414&atid=422030
+# and http://lists.fedoraproject.org/pipermail/python-devel/2012-July/000406.html
+import xml
+if "_xmlplus" in xml.__path__[0]: # PyXML sub-module
+    xml.__path__.reverse() # If both are available, prefer stdlib over PyXML
+
 import xml.sax.saxutils
 from StringIO import StringIO
 
